# EigenNumpy

./: CMakeLists.txt  Readme.md  main.cc  main.py  test_EigenNumpy.py
include/: cmatrix.h  cnumpy.h  cvector.h
src/: EigenNumpy.cpp  cmatrix.cc  cnumpy.cc  cvector.cc
